# neure-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md
.github/workflows/: docs.yml  rust.yml
benches/: README.md  perf.rs
docs/: index.md  license.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/concepts/: architecture.md  capabilities.md  embedding.md  engines.md  feature-flags.md  runtime-traits.md
docs/guide/: intro.md  quick-start.md
docs/howto/: embed-into-host.md  lora-adapters.md  multi-source-registry.md  vision-tasks.md
docs/reference/: anthropic.md  api.md  env-vars.md  server-state.md
examples/: real_model_rerank_cohere_smoke.rs  real_model_rerank_smoke.rs  real_model_smoke.rs
scripts/: build-flash-attn.sh
src/: api_error.rs  config.rs  embedded.rs  lib.rs
src/adapter/: anthropic_messages.rs  mod.rs  openai_chat.rs  registry.rs
src/asr/: audio.rs  mod.rs  registry.rs  whisper.rs
src/canonical/: content.rs  mod.rs  sampling.rs  tool.rs  types.rs  usage.rs
src/capabilities/: api_style.rs  catalog.rs  mod.rs  modality.rs  model_caps.rs
src/chronos2/: candle_runtime.rs  mod.rs  output.rs  registry.rs
src/embedding/: candle.rs  mod.rs  registry.rs
src/engine/: bridge.rs  mod.rs  registry.rs
src/llm/: candle_arch.rs  candle_runtime.rs  candle_runtime_tests.rs  litert_runtime.rs  mistralrs_runtime.rs  mod.rs  registry.rs  translators.rs
src/models/: catalog.rs  handlers.rs  huggingface.rs  job.rs  mod.rs  modelscope.rs  puller.rs  registry.rs  source.rs
src/rerank/: candle.rs  cohere.rs  jina.rs  mod.rs  mxbai.rs  registry.rs
src/server/: dispatch.rs  error.rs  handlers.rs  mod.rs  state.rs
src/tts/: mod.rs  registry.rs  voxcpm.rs
src/tts/voxcpm_burn/: audiovae.rs  compat.rs  minicpm4.rs  mod.rs  voxcpm_model.rs
src/vision/: candle_yolo.rs  coco_classes.rs  letterbox.rs  lora.rs  lora_weights.rs  mod.rs  nms.rs  ort_runtime.rs  registry.rs  yolov8_arch.rs
src/vision/ort_backends/: mod.rs  tract_backend.rs
